--- a/Pages/cadastro.html
+++ b/Pages/cadastro.html
@@ -3,45 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Cadastre-se</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
 </head>
     <body class="d-flex align-items-center justify-content-center bg-danger">
         <main class="w-100 m-auto form-container">
-            <form class="text-center">
+            <form class="text-center" id="formCadastro">
                 <img class="mb-5" height="150" width="300" src="/Assets/Images/ifood-logo-bran-gran-9800797 1.png" alt="Logo Ifood">
                 <div class="form-floating">
-                    <input type="text" class="form-control rounded-3 mb-4"  id="floatingInput" placeholder="exemplo@gmail.com">
-                    <label for="floatingInput">Nome completo</label>
+                    <input type="text" class="form-control rounded-3 mb-4"  id="nome" placeholder="Pedro Silva">
+                    <label for="nome">Nome completo</label>
                 </div>
                 <div class="form-floating">
-                    <input type="email" class="form-control rounded-3 mb-4"  id="floatingInput" placeholder="exemplo@gmail.com">
-                    <label for="floatingInput">E-mail</label>
+                    <input type="email" class="form-control rounded-3 mb-4"  id="email" placeholder="exemplo@gmail.com">
+                    <label for="email">E-mail</label>
                 </div>
                 <div class="form-floating">
-                    <input type="password" class="form-control rounded-3 mb-4"  id="floatingInput" placeholder="exemplo@gmail.com">
-                    <label for="floatingInput">Senha</label>
+                    <input type="password" class="form-control rounded-3 mb-4"  id="password" placeholder="exemplo@gmail.com">
+                    <label for="password">Senha</label>
                 </div>
                 <div class="form-floating">
-                    <input type="password" class="form-control rounded-3 mb-4"  id="floatingInput" placeholder="exemplo@gmail.com">
-                    <label for="floatingInput">Confirmar Senha</label>
+                    <input type="password" class="form-control rounded-3 mb-4"  id="confirmPassword" placeholder="exemplo@gmail.com">
+                    <label for="confirmPassword">Confirmar Senha</label>
                 </div>
                 <div class="form-floating">
-                    <input type="text" class="form-control rounded-3 mb-4"  id="floatingInput" placeholder="">
-                    <label for="floatingInput">Nome do estabelecimento</label>
+                    <input type="text" class="form-control rounded-3 mb-4"  id="estabelecimento" placeholder="Nome estabelecimento">
+                    <label for="estabelecimento">Nome do estabelecimento</label>
                 </div>
                 <div class="form-floating">
-                    <input type="number" class="form-control rounded-3 mb-4"  id="floatingInput" placeholder="">
-                    <label for="floatingInput">CNPJ</label>
+                    <input type="text" class="form-control rounded-3 mb-4"  id="cnpj" placeholder="CNPJ">
+                    <label for="cnpj">CNPJ</label>
                 </div>
+
+                <button type="submit" class="btn btn-primary w-100 mt-2 rounded-4 bg-white text-danger border">
+                    <h1 class="h3 m-1 fw-bold">Finalizar Cadastro</h1>
+                </button> 
             </form>
-            <button class="btn btn-primary w-100 mt-2 rounded-4 bg-white text-danger border">
-                <h1 class="h3 m-1 fw-bold">Finalizar Cadastro</h1>
-            </button>
         </main>
-    
-    
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="/Js/cadastro.js"></script>
     </body>
 </html>
