--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   </head>
   <body class="d-flex align-items-center justify-content-center bg-danger">
     <main class="w-100 m-auto form-container">
-        <form class="text-center">
+        <form id="formLogin" class="text-center">
             <img class="mb-5" height="150" width="300" src="./Assets/Images/ifood-logo-bran-gran-9800797 1.png" alt="Logo Ifood">
             <h1 class="h2 text-white mb-5 fw-bold text-center">Gerencie seu restaurante com facilidade!!</h1>
             
             <div class="form-floating">
-                <input type="email" class="form-control rounded-3 mb-4"  id="floatingInput" placeholder="exemplo@gmail.com">
-                <label for="floatingInput">Email</label>
+                <input type="email" class="form-control rounded-3 mb-4"  id="loginEmail" placeholder="exemplo@gmail.com">
+                <label for="loginEmail">Email</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control rounded-3 mb-3" id="floatingInput" placeholder="******">
-                <label for="floatingInput">Senha</label>
+                <input type="password" class="form-control rounded-3 mb-3" id="loginPassword" placeholder="******">
+                <label for="loginPassword">Senha</label>
             </div>
             <h2 class="h6 text-white text-end fw-medium">Esqueceu sua senha? 
                 <a href="#" class="text-decoration-none">Clique aqui</a>
             </h2>
-            <button class="btn btn-primary w-100 py-2 my-4 fs-3 rounded-4 bg-white text-danger fw-medium border ">
-                <h3 class="m-1 ">Acessar minha conta</h3>
+            <button type="submit" class="btn btn-primary w-100 py-2 my-4 fs-3 rounded-4 bg-white text-danger fw-medium border ">
+                <h3 class="m-1">Acessar minha conta</h3>
             </button>
             <h3 class="h6 m-0 text-end text-white">Crie sua conta em poucos passos!
                 <a href="/Pages/cadastro.html" class="text-decoration-none">Cadastre-se</a>
@@ -35,7 +35,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <script src="./Js/scrpits.js"></script>
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
