--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <title>BackOffice Ifood</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preload" href="/Assets/fonts/iFoodRCTextos-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body class="d-flex align-items-center justify-content-center bg-danger">
-    <main class="w-100 m-auto form-container">
-        <form id="formLogin" class="text-center">
-            <img class="mb-5" height="150" width="300" src="./Assets/Images/ifood-logo-bran-gran-9800797 1.png" alt="Logo Ifood">
-            <h1 class="h2 text-white mb-5 fw-bold text-center">Gerencie seu restaurante com facilidade!!</h1>
-            
+  <body class="d-flex bg-danger">
+    <main class="w-100 m-auto form-container bg-light">
+        <form id="formLogin" class="text-center bg-light">
+            <img height="260" width="260" src="./Assets/Images/logo-ifood-256.png" alt="Logo Ifood">
+            <h1 class="h2 text-danger mb-4 fw-bold text-center">Gerencie seu restaurante com facilidade!!</h1>
             <div class="form-floating">
-                <input type="email" class="form-control rounded-3 mb-4"  id="loginEmail" placeholder="exemplo@gmail.com">
-                <label for="loginEmail">Email</label>
+                <input type="email" class="form-control rounded-3 mb-4 bg-danger"  id="loginEmail" placeholder="exemplo@gmail.com">
+                <label for="loginEmail" class="text-light">Email</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control rounded-3 mb-3" id="loginPassword" placeholder="******">
-                <label for="loginPassword">Senha</label>
+                <input type="password" class="form-control rounded-3 mb-3 bg-danger text-black" id="loginPassword" placeholder="******">
+                <label for="loginPassword" class="text-light">Senha</label>
             </div>
-            <h2 class="h6 text-white text-end fw-medium">Esqueceu sua senha? 
-                <a href="#" class="text-decoration-none">Clique aqui</a>
+            <h2 class="h6 text-danger text-end fw-medium">Esqueceu sua senha? 
+                <a href="#" class="text-decoration-none text-primary">Clique aqui</a>
             </h2>
-            <button type="submit" class="btn btn-primary w-100 py-2 my-4 fs-3 rounded-4 bg-white text-danger fw-medium border ">
+            <button type="submit" class="btn btn-primary w-100 py-2 my-3 fs-3 rounded-5 bg-danger fw-medium border ">
                 <h3 class="m-1">Acessar minha conta</h3>
             </button>
-            <h3 class="h6 m-0 text-end text-white">Crie sua conta em poucos passos!
+            <h3 class="h6 text-end text-danger">Crie sua conta em poucos passos!
                 <a href="/Pages/cadastro.html" class="text-decoration-none">Cadastre-se</a>
             </h3>
         </form>
