atualização das paginas Dashboard/InfoGerais

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h3 class="m-1">Acessar minha conta</h3>
             </button>
             <h3 class="h6 text-end text-danger">Crie sua conta em poucos passos!
-                <a href="/Pages/cadastro.html" class="text-decoration-none">Cadastre-se</a>
+                <a href="/Pages/cadastro/cadastro.html" class="text-decoration-none">Cadastre-se</a>
             </h3>
         </form>
     </main>
