Atualização no js da pagina InfoGerais

--- a/Pages/infoGerais/infoGerais.html
+++ b/Pages/infoGerais/infoGerais.html
@@ -36,8 +36,8 @@
   </nav>
 
 <main class="bg-body-secondary mx-3">
-  <div class="d-flex justify-content-evenly align-items-center d-lg-none">
-    <a href="/Pages/dashboard/dashboard.html" class="bi bi-arrow-left text-danger custom-icon ps-3"></a>
+  <div class="d-flex justify-content-between align-items-center d-lg-none">
+    <a href="/Pages/dashboard/dashboard.html" class="bi bi-arrow-left text-danger custom-icon"></a>
     <img class="me-2" src="/Assets/Images/logo-ifood-256.png" alt="logo ifood vermelho" width="70">
   </div>
 
