--- a/Pages/cadastro/cadastro.html
+++ b/Pages/cadastro/cadastro.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="/style.css">
 </head>
     <body class="d-flex align-items-center justify-content-center bg-danger">
-        <main class="w-100 h-auto form-container bg-light">
+        <main class="w-100 h-auto form-container bg-light py-5">
             <form class="text-center" id="formCadastro">
-                <img height="250" width="300" src="/Assets/Images/logo-ifood-256.png" alt="Logo Ifood">
+                <img height="230" width="280" src="/Assets/Images/logo-ifood-256.png" alt="Logo Ifood">
                 <div class="form-floating">
                     <input type="text" class="form-control rounded-3 mb-4 bg-danger"  id="nome" placeholder="Pedro Silva">
                     <label class="text-light" for="nome">Nome completo</label>
