Finalizando atualizacoes do projeto

--- a/Pages/geral/geral.html
+++ b/Pages/geral/geral.html
@@ -21,11 +21,11 @@
               <i class="bi bi-bar-chart custom-icon"></i>
               <span class="text-nowrap">Informações Gerais</span>
               </a>
-            <a href="#" class="text-light nav-link">
+            <a href="/Pages/calculadora/calculadora.html" class="text-light nav-link">
               <i class="bi bi-calculator custom-icon"></i>
               <span class="text-nowrap">Calculadora de Taxas</span>
             </a>
-            <a href="#" class="text-light nav-link">
+            <a href="/Pages/informacao conta/conta.html" class="text-light nav-link">
               <i class="bi bi-person custom-icon"></i>
               <span class="text-nowrap">Perfil</span>
             </a>
@@ -34,6 +34,11 @@
     </nav>
 
     <main class="mx-3">
+        <div class="d-flex justify-content-between align-items-center d-lg-none">
+            <a href="/Pages/dashboard/dashboard.html" class="bi bi-arrow-left text-danger custom-icon"></a>
+            <img class="me-2" src="/Assets/Images/logo-ifood-256.png" alt="logo ifood vermelho" width="70">
+          </div>
+
         <div class="d-flex justify-content-sm-center align-items-center pt-3">
             <hr class="flex-grow-1">
             <span class="fs-3 px-3 text-nowrap">Visão Geral</span>
