--- a/Pages/calculadora/calculadora.html
+++ b/Pages/calculadora/calculadora.html
@@ -14,12 +14,34 @@
 </head>
 
 <body>
-  <div class="container mt-5">
+  <nav class="navbar navbar-expand-lg bg-danger text-white d-none d-md-flex navbar-top p-3">
+    <div class="container-fluid">
+      <a href="/Pages/dashboard/dashboard.html">
+        <img src="/Assets/Images/ifood-logo-bran-gran-9800797 1.png" alt="Logo Ifood Branco" width="75px">
+      </a>
+      <div class="d-flex col-6 justify-content-evenly">
+        <a href="/Pages/infoGerais/infoGerais.html" class="text-light nav-link">
+          <i class="bi bi-bar-chart custom-icon"></i>
+          <span class="text-nowrap">Informações Gerais</span>
+          </a>
+        <a href="/Pages/calculadora/calculadora.html" class="text-light nav-link">
+          <i class="bi bi-calculator custom-icon"></i>
+          <span class="text-nowrap">Calculadora de Taxas</span>
+        </a>
+        <a href="/Pages/informacao conta/conta.html" class="text-light nav-link">
+          <i class="bi bi-person custom-icon"></i>
+          <span class="text-nowrap">Perfil</span>
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-12 col-md-6">
-        <div class="d-flex align-items-center mb-3">
+        <div class="d-flex d-lg-none align-items-center justify-content-between mb-3">
           <button class="icon btn">
-            <i class="icon-seta bi bi-arrow-left"></i>
+            <a href="/Pages/dashboard/dashboard.html" class="icon-seta bi bi-arrow-left"></a>
           </button>
           <h3>Calculadora de Taxas</h3>
         </div>
@@ -35,7 +57,7 @@
               class="btn escolha d-flex justify-content-between align-items-center border p-3">
               <span>Básico</span>
               <div class="icon">
-                <i class="bi bi-bag-fill"></i>
+                <i class="bi bi-bag-fill i-custom"></i>
               </div>
             </button>
           </div>
@@ -44,11 +66,11 @@
               class="btn escolha d-flex justify-content-between align-items-center border p-3">
               <span>Entrega</span>
               <div class="icon">
-                <i class="bi bi-bicycle bike"></i>
+                <i class="bi bi-bicycle bike i-custom"></i>
               </div>
             </button>
           </div>
-          <h4 class="text-align">Inform o valor do seu pedido</h4>
+          <h4 class="text-align">Informe o valor do seu pedido</h4>
         </div>
       </div>
     </div>
@@ -106,7 +128,7 @@
               </div>
             </div>
           </div>
-          <button class="calcular btn" onclick="calculate()">Calcular</button>
+          <button class="calcular btn mb-5" onclick="calculate()">Calcular</button>
 
           <div id="resultContainer" class="hidden">
             <div class="texto-resultado d-flex align-items-center">
@@ -128,7 +150,21 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
+
+  <nav class="navbar bg-danger fixed-bottom d-md-none rounded-top-4">
+    <div class="container-fluid justify-content-around">
+      <a href="/Pages/infoGerais/infoGerais.html" class="text-light nav-link">
+        <i class="bi bi-clipboard2-data fixed-bottom-icons"></i>
+      </a>
+      <a href="/Pages/calculadora/calculadora.html" class="text-light nav-link">
+        <i class="bi bi-calculator fixed-bottom-icons"></i>
+      </a>
+      <a href="/Pages/informacao conta/conta.html" class="text-light nav-link">
+        <i class="bi bi-person fixed-bottom-icons"></i>
+      </a>
+    </div>
+  </nav>
 
   <!-- Modal -->
   <div class="modal fade" id="alertModal" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
