--- a/Pages/dashboard/dashboard.html
+++ b/Pages/dashboard/dashboard.html
@@ -24,11 +24,11 @@
           <i class="bi bi-bar-chart custom-icon"></i>
           <span class="text-nowrap">Informações Gerais</span>
           </a>
-        <a href="#" class="text-light nav-link">
+        <a href="/Pages/calculadora/calculadora.html" class="text-light nav-link">
           <i class="bi bi-calculator custom-icon"></i>
           <span class="text-nowrap">Calculadora de Taxas</span>
         </a>
-        <a href="#" class="text-light nav-link">
+        <a href="/Pages/informacao conta/conta.html" class="text-light nav-link">
           <i class="bi bi-person custom-icon"></i>
           <span class="text-nowrap">Perfil</span>
         </a>
@@ -167,10 +167,10 @@
       <a href="/Pages/infoGerais/infoGerais.html" class="text-light nav-link">
         <i class="bi bi-clipboard2-data fixed-bottom-icons"></i>
       </a>
-      <a href="#" class="text-light nav-link">
+      <a href="/Pages/calculadora/calculadora.html" class="text-light nav-link">
         <i class="bi bi-calculator fixed-bottom-icons"></i>
       </a>
-      <a href="#" class="text-light nav-link">
+      <a href="/Pages/informacao conta/conta.html" class="text-light nav-link">
         <i class="bi bi-person fixed-bottom-icons"></i>
       </a>
     </div>
