--- a/Pages/infoGerais/infoGerais.html
+++ b/Pages/infoGerais/infoGerais.html
@@ -23,11 +23,11 @@
           <i class="bi bi-bar-chart custom-icon"></i>
           <span class="text-nowrap">Informações Gerais</span>
           </a>
-        <a href="#" class="text-light nav-link">
+        <a href="/Pages/calculadora/calculadora.html" class="text-light nav-link">
           <i class="bi bi-calculator custom-icon"></i>
           <span class="text-nowrap">Calculadora de Taxas</span>
         </a>
-        <a href="#" class="text-light nav-link">
+        <a href="/Pages/informacao conta/conta.html" class="text-light nav-link">
           <i class="bi bi-person custom-icon"></i>
           <span class="text-nowrap">Perfil</span>
         </a>
@@ -101,6 +101,20 @@
     </div>
   </div>
 </main>
+
+<nav class="navbar bg-danger fixed-bottom d-md-none rounded-top-4">
+  <div class="container-fluid justify-content-around">
+    <a href="/Pages/infoGerais/infoGerais.html" class="text-light nav-link">
+      <i class="bi bi-clipboard2-data fixed-bottom-icons"></i>
+    </a>
+    <a href="/Pages/calculadora/calculadora.html" class="text-light nav-link">
+      <i class="bi bi-calculator fixed-bottom-icons"></i>
+    </a>
+    <a href="/Pages/informacao conta/conta.html" class="text-light nav-link">
+      <i class="bi bi-person fixed-bottom-icons"></i>
+    </a>
+  </div>
+</nav>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
