--- a/Pages/receitas/receitas.html
+++ b/Pages/receitas/receitas.html
@@ -21,11 +21,11 @@
               <i class="bi bi-bar-chart custom-icon"></i>
               <span class="text-nowrap">Informações Gerais</span>
               </a>
-            <a href="#" class="text-light nav-link">
+            <a href="/Pages/calculadora/calculadora.html" class="text-light nav-link">
               <i class="bi bi-calculator custom-icon"></i>
               <span class="text-nowrap">Calculadora de Taxas</span>
             </a>
-            <a href="#" class="text-light nav-link">
+            <a href="/Pages/informacao conta/conta.html" class="text-light nav-link">
               <i class="bi bi-person custom-icon"></i>
               <span class="text-nowrap">Perfil</span>
             </a>
