--- a/Pages/geral/geral.html
+++ b/Pages/geral/geral.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>transações Gerais</title>
+
+    <link rel="stylesheet" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="preload" href="/Assets/Fonts/iFoodRCTextos-Bold.woff2" as="font" type="font/woff2" crossorigin>
